# UQAC_Prog_Moteur

./: .gitignore  README.md
Batching/: .gitignore  README.md  remise.sh
Batching/examples/chickendodge/: imgui.ini
Batching/examples/chickendodge/data/: equipe.yaml
Batching/include/simplege/: resources.h
Batching/include/simplege/components/: layer.h  rendercompositor.h  sprite.h  spritesheet.h  visual.h
Batching/include/simplege/graphics/: material.h
Batching/include/simplege/systems/: guisystem.h  system.h
Batching/lib/gfxapi/: CMakeLists.txt
Batching/lib/gfxapi/include/gfxapi/: buffer.h  commandbuffer.h  memorymap.h
Batching/lib/gfxapi/include/gfxapi/private/: memorymap.inl
Batching/lib/gfxapi/src/: buffer.cpp  commandbuffer.cpp  queue.cpp  utils.cpp
Batching/src/: game.cpp  scene.cpp
Batching/src/components/: camera.cpp  layer.cpp  sprite.cpp  spritesheet.cpp
Batching/src/systems/: guisystem.cpp
CollisionDetection/: .gitignore  README.md
CollisionDetection/examples/chickendodge/: CMakeLists.txt
CollisionDetection/examples/chickendodge/include/chickendodge/: components.h
CollisionDetection/examples/chickendodge/include/chickendodge/components/: life.h
CollisionDetection/examples/chickendodge/include/chickendodge/pch/: precomp.h
CollisionDetection/examples/chickendodge/src/components/: rupee.cpp
CollisionDetection/include/simplege/: eventtrigger.h  image.h  math.h  scene.h  shaderprograms.h
CollisionDetection/include/simplege/components/: collider.h  keyboardinput.h
CollisionDetection/include/simplege/private/: compositor.inl  material.inl
CollisionDetection/include/simplege/systems/: displaysystem.h  physicsystem.h
CollisionDetection/lib/gfxapi/src/: buffer.cpp  shader.cpp  texture.cpp
CollisionDetection/src/: entity.cpp  material.cpp
CollisionDetection/src/components/: debugdrawcalls.cpp  layer.cpp  rawsprite.cpp  sprite.cpp
Networking/: CMakeLists.txt  README.md
Networking/examples/chickendodge/: CMakeLists.txt
Networking/examples/chickendodge/data/: equipe.yaml
Networking/examples/chickendodge/data/locales/: en.json
Networking/examples/chickendodge/data/scenes/: server.json
Networking/examples/chickendodge/data/shaders/: compositor.glsl
Networking/examples/chickendodge/include/chickendodge/: components.h  messages.h
Networking/examples/chickendodge/include/chickendodge/components/: chicken.h  gameinstructions.h  networkleaderboard.h  player.h
Networking/examples/chickendodge/include/chickendodge/messages/: networklogin.h  networkscore.h  networkscorelist.h
Networking/examples/chickendodge/server/: networkplayerserver.cpp  networkplayerserver.h
Networking/examples/chickendodge/src/: game.cpp
Networking/examples/chickendodge/src/components/: countdown.cpp  networkleaderboard.cpp  player.cpp  timer.cpp
Networking/include/simplege/: binasset.h  commandline.h  components.h  game.h  network.h  simplege.h
Networking/include/simplege/components/: camera.h  deformationcompositor.h  spritesheet.h  textsprite.h  texture.h
Networking/include/simplege/graphics/: window.h
Networking/include/simplege/messages/: message.h  networkinputchanged.h
Networking/include/simplege/pch/: precomp.h
Networking/include/simplege/systems/: entitysystem.h  logicsystem.h  networksystem.h
Networking/lib/gfxapi/include/gfxapi/: descriptor.h  swapchain.h
Networking/lib/gfxapi/include/gfxapi/private/: commandbuffer.inl
Networking/lib/gfxapi/src/: commandbuffer.cpp
Networking/src/: resources.cpp
Networking/src/components/: collider.cpp  component.cpp  keyboardinput.cpp  position.cpp  sprite.cpp  textsprite.cpp  texture.cpp
Regionalization/: CMakeLists.txt  README.md  pretty.ps1  pretty.sh
Regionalization/cmake/: enable_cmp0077.cmake
Regionalization/examples/chickendodge/: CMakeLists.txt
Regionalization/examples/chickendodge/data/: equipe.yaml
Regionalization/examples/chickendodge/src/: game.cpp
Regionalization/include/simplege/: game.h  math.h  simplege.h
Regionalization/include/simplege/components/: collision.h  logic.h  rawsprite.h
Regionalization/include/simplege/pch/: precomp.h
Regionalization/include/simplege/systems/: physicsystem.h
Regionalization/lib/gfxapi/: CMakeLists.txt
Regionalization/lib/gfxapi/src/: adapter.cpp  framebuffer.cpp  swapchain.cpp
Regionalization/src/: commandline.cpp  localisation.cpp
Regionalization/src/components/: deformationcompositor.cpp
Regionalization/src/systems/: guisystem.cpp
Shaders/: .clang-format  CMakeLists.txt  remise.ps1
Shaders/cmake/: common.cmake
Shaders/examples/chickendodge/data/: equipe.yaml
Shaders/examples/chickendodge/data/scenes/: play.json
Shaders/examples/chickendodge/data/shaders/: deformation.frag
Shaders/examples/chickendodge/include/chickendodge/: shaderprograms.h
Shaders/examples/chickendodge/include/chickendodge/components/: backgroundloader.h  chickenspawner.h  rupee.h  score.h
Shaders/examples/chickendodge/src/: game.cpp
Shaders/examples/chickendodge/src/components/: countdown.cpp  life.cpp  referee.cpp
Shaders/include/simplege/: components.h  entity.h  mathjson.h  references.h  simplege.h  textasset.h  timing.h
Shaders/include/simplege/components/: compositor.h  debugdrawcalls.h  enabler.h  position.h  sprite.h
Shaders/include/simplege/private/: inline.h
Shaders/lib/gfxapi/include/gfxapi/: adapter.h  basetypes.h  buffer.h  device.h  gfxinstance.h  keycodes.h  pipeline.h  texture.h
Shaders/lib/gfxapi/src/: gfxinstance.cpp  pipeline.cpp
Shaders/src/: image.cpp
Shaders/src/components/: compositor.h  rendercompositor.cpp
Shaders/src/systems/: displaysystem.cpp
Sound/: CMakeLists.txt  README.md
Sound/cmake/: common.cmake
Sound/examples/: CMakeLists.txt
Sound/examples/chickendodge/: CMakeLists.txt
Sound/include/simplege/: localisation.h  messages.h  serializer.h  simplege.h
Sound/src/: game.cpp  network.cpp  shaderprogram.cpp
Sound/src/components/: compositor.cpp  enabler.cpp  networkinput.cpp  texture.h
Sound/src/systems/: audiosystem.cpp  firstprocessguard.h
(+101 files in other folders)
